lazy load class removed and spacing between sections fixed

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 50px 0;
+  padding: 3em 0 1em;
 }
 
 a {
